--- a/build.gradle
+++ b/build.gradle
@@ -1,4 +1,15 @@
-plugins { id "ca.coglinc.javacc" version "2.4.0" }
+buildscript {
+
+    repositories {
+        mavenLocal()
+        mavenCentral()
+    }
+    dependencies {
+        classpath group: 'ca.coglinc', name: 'javacc-gradle-plugin', version: '2.5.0'
+    }
+}
+
+//plugins { id "ca.coglinc.javacc" version "2.4.0" }
 
 apply plugin: 'ca.coglinc.javacc'
 apply plugin: 'cpp'
@@ -6,30 +17,63 @@ apply plugin: 'cpp'
 version='7.0.0'
 
 repositories {
-	flatDir {
-		name "fileRepo"
-		dirs "repo"
-	}
-
-	maven {
-		url "https://oss.sonatype.org/content/repositories/netjavadevjavacc-1002/"
-	}
-
 	mavenCentral()
 	
     dependencies {
 		javacc 'net.java.dev.javacc:javacc:7.0.0'
     }
 }
-/*
- compileJjtree {
-    inputDirectory = new File(projectDir, 'src')
-    outputDirectory = new File(projectDir, 'generated/jjtree')
+compileJjtree {
+	language 'Cpp'
+    include '*.cc'
+    include '*.h'
+    inputDirectory  = projectDir
+    outputDirectory = new File(projectDir, 'gen')
 //    arguments = [grammar_encoding: 'UTF-8', static: 'false']
 }
-*/
+compileJavacc {
+	inputDirectory 	compileJjtree.outputDirectory
+	outputDirectory	compileJjtree.outputDirectory
+}
+model {
+    components { 
+        SPLC(NativeExecutableSpec) {
+			sources {
+				generated(CppSourceSet) {
+					source {
+						srcDir compileJjtree.outputDirectory
+						include "*.cc"
+					}
+					exportedHeaders {
+						srcDir compileJjtree.outputDirectory
+					}
+			   }
+			   cpp {
+					source {
+						srcDir projectDir
+						include "*.cpp"
+					}
+					lib sources.generated
+				}
+			}
+        }
+    }
+	binaries {
+		all {
+			// Define a preprocessor macro for every binary
+			cppCompiler.define "NDEBUG"
 
-//compileJavacc {
-//    inputDirectory = new File(projectDir, 'src')
-//	include '**/*.java'
-//}
+			// Define toolchain-specific compiler and linker options
+			if (toolChain in Gcc) {
+				cppCompiler.args "-O2", "-fno-access-control"
+				linker.args "-Xlinker", "-S"
+			}
+			if (toolChain in VisualCpp) {
+				cppCompiler.args "/FS"
+				cppCompiler.args "/EHsc"
+				cppCompiler.args "/Zi"
+				linker.args "/DEBUG"
+			}
+		}
+	}
+}
