--- a/gradle/wrapper/gradle-wrapper.properties
+++ b/gradle/wrapper/gradle-wrapper.properties
@@ -1,6 +1,6 @@
-#Sat Dec 24 19:17:47 CET 2016
+#Mon Dec 26 17:47:45 CET 2016
 distributionBase=GRADLE_USER_HOME
 distributionPath=wrapper/dists
 zipStoreBase=GRADLE_USER_HOME
 zipStorePath=wrapper/dists
-distributionUrl=https\://services.gradle.org/distributions-snapshots/gradle-3.4-20161211090619+0000-bin.zip
+distributionUrl=https\://services.gradle.org/distributions/gradle-3.3-rc-1-bin.zip
