--- a/vs2015/SPLC.vcxproj
+++ b/vs2015/SPLC.vcxproj
@@ -236,7 +236,7 @@
     <ClInclude Include="..\src\main\cpp\MyNode.h" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="..\gen\SPL.jj" />
+    <None Include="..\SPL.jjt" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
