--- a/vs2015/SPLC.vcxproj.filters
+++ b/vs2015/SPLC.vcxproj.filters
@@ -283,6 +283,6 @@
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
-    <None Include="..\gen\SPL.jj" />
+    <None Include="..\SPL.jjt" />
   </ItemGroup>
 </Project>
