--- a/vs2015/SPLC.vcxproj
+++ b/vs2015/SPLC.vcxproj
@@ -74,12 +74,14 @@
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
     <LinkIncremental>true</LinkIncremental>
+    <IncludePath>../jjt;../gen;$(IncludePath)</IncludePath>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
     <LinkIncremental>false</LinkIncremental>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
     <LinkIncremental>false</LinkIncremental>
+    <IncludePath>../jjt;../gen;$(IncludePath)</IncludePath>
   </PropertyGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <ClCompile>
@@ -144,37 +146,10 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="..\gen\ASTAddNode.cc" />
-    <ClCompile Include="..\gen\ASTAndNode.cc" />
-    <ClCompile Include="..\gen\ASTAssignment.cc" />
-    <ClCompile Include="..\gen\ASTBitwiseAndNode.cc" />
-    <ClCompile Include="..\gen\ASTBitwiseComplNode.cc" />
-    <ClCompile Include="..\gen\ASTBitwiseOrNode.cc" />
-    <ClCompile Include="..\gen\ASTBitwiseXorNode.cc" />
-    <ClCompile Include="..\gen\ASTBlock.cc" />
-    <ClCompile Include="..\gen\ASTCompilationUnit.cc" />
-    <ClCompile Include="..\gen\ASTDivNode.cc" />
-    <ClCompile Include="..\gen\ASTEQNode.cc" />
-    <ClCompile Include="..\gen\ASTFalseNode.cc" />
-    <ClCompile Include="..\gen\ASTGENode.cc" />
-    <ClCompile Include="..\gen\ASTGTNode.cc" />
-    <ClCompile Include="..\gen\ASTId.cc" />
-    <ClCompile Include="..\gen\ASTIfStatement.cc" />
-    <ClCompile Include="..\gen\ASTIntConstNode.cc" />
-    <ClCompile Include="..\gen\ASTLENode.cc" />
-    <ClCompile Include="..\gen\ASTLTNode.cc" />
-    <ClCompile Include="..\gen\ASTModNode.cc" />
-    <ClCompile Include="..\gen\ASTMulNode.cc" />
-    <ClCompile Include="..\gen\ASTNENode.cc" />
-    <ClCompile Include="..\gen\ASTNotNode.cc" />
-    <ClCompile Include="..\gen\ASTOrNode.cc" />
-    <ClCompile Include="..\gen\ASTReadStatement.cc" />
-    <ClCompile Include="..\gen\ASTStatementExpression.cc" />
-    <ClCompile Include="..\gen\ASTSubtractNode.cc" />
-    <ClCompile Include="..\gen\ASTTrueNode.cc" />
-    <ClCompile Include="..\gen\ASTVarDeclaration.cc" />
-    <ClCompile Include="..\gen\ASTWhileStatement.cc" />
-    <ClCompile Include="..\gen\ASTWriteStatement.cc" />
+    <None Include="..\gen\SPL.jj" />
+    <None Include="..\SPL.jjt" />
+  </ItemGroup>
+  <ItemGroup>
     <ClCompile Include="..\gen\CharStream.cc" />
     <ClCompile Include="..\gen\JJTSPLParserState.cc" />
     <ClCompile Include="..\gen\ParseException.cc" />
@@ -183,45 +158,44 @@
     <ClCompile Include="..\gen\SPLParserTokenManager.cc" />
     <ClCompile Include="..\gen\Token.cc" />
     <ClCompile Include="..\gen\TokenMgrError.cc" />
-    <ClCompile Include="..\SPLC.cpp" />
+    <ClCompile Include="..\jjt\ASTAddNode.cc" />
+    <ClCompile Include="..\jjt\ASTAndNode.cc" />
+    <ClCompile Include="..\jjt\ASTAssignment.cc" />
+    <ClCompile Include="..\jjt\ASTBitwiseAndNode.cc" />
+    <ClCompile Include="..\jjt\ASTBitwiseComplNode.cc" />
+    <ClCompile Include="..\jjt\ASTBitwiseOrNode.cc" />
+    <ClCompile Include="..\jjt\ASTBitwiseXorNode.cc" />
+    <ClCompile Include="..\jjt\ASTBlock.cc" />
+    <ClCompile Include="..\jjt\ASTCompilationUnit.cc" />
+    <ClCompile Include="..\jjt\ASTDivNode.cc" />
+    <ClCompile Include="..\jjt\ASTEQNode.cc" />
+    <ClCompile Include="..\jjt\ASTFalseNode.cc" />
+    <ClCompile Include="..\jjt\ASTGENode.cc" />
+    <ClCompile Include="..\jjt\ASTGTNode.cc" />
+    <ClCompile Include="..\jjt\ASTId.cc" />
+    <ClCompile Include="..\jjt\ASTIfStatement.cc" />
+    <ClCompile Include="..\jjt\ASTIntConstNode.cc" />
+    <ClCompile Include="..\jjt\ASTLENode.cc" />
+    <ClCompile Include="..\jjt\ASTLTNode.cc" />
+    <ClCompile Include="..\jjt\ASTModNode.cc" />
+    <ClCompile Include="..\jjt\ASTMulNode.cc" />
+    <ClCompile Include="..\jjt\ASTNENode.cc" />
+    <ClCompile Include="..\jjt\ASTNotNode.cc" />
+    <ClCompile Include="..\jjt\ASTOrNode.cc" />
+    <ClCompile Include="..\jjt\ASTReadStatement.cc" />
+    <ClCompile Include="..\jjt\ASTStatementExpression.cc" />
+    <ClCompile Include="..\jjt\ASTSubtractNode.cc" />
+    <ClCompile Include="..\jjt\ASTTrueNode.cc" />
+    <ClCompile Include="..\jjt\ASTVarDeclaration.cc" />
+    <ClCompile Include="..\jjt\ASTWhileStatement.cc" />
+    <ClCompile Include="..\jjt\ASTWriteStatement.cc" />
+    <ClCompile Include="..\jjt\MyNode.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="..\gen\ASTAddNode.h" />
-    <ClInclude Include="..\gen\ASTAndNode.h" />
-    <ClInclude Include="..\gen\ASTAssignment.h" />
-    <ClInclude Include="..\gen\ASTBitwiseAndNode.h" />
-    <ClInclude Include="..\gen\ASTBitwiseComplNode.h" />
-    <ClInclude Include="..\gen\ASTBitwiseOrNode.h" />
-    <ClInclude Include="..\gen\ASTBitwiseXorNode.h" />
-    <ClInclude Include="..\gen\ASTBlock.h" />
-    <ClInclude Include="..\gen\ASTCompilationUnit.h" />
-    <ClInclude Include="..\gen\ASTDivNode.h" />
-    <ClInclude Include="..\gen\ASTEQNode.h" />
-    <ClInclude Include="..\gen\ASTFalseNode.h" />
-    <ClInclude Include="..\gen\ASTGENode.h" />
-    <ClInclude Include="..\gen\ASTGTNode.h" />
-    <ClInclude Include="..\gen\ASTId.h" />
-    <ClInclude Include="..\gen\ASTIfStatement.h" />
-    <ClInclude Include="..\gen\ASTIntConstNode.h" />
-    <ClInclude Include="..\gen\ASTLENode.h" />
-    <ClInclude Include="..\gen\ASTLTNode.h" />
-    <ClInclude Include="..\gen\ASTModNode.h" />
-    <ClInclude Include="..\gen\ASTMulNode.h" />
-    <ClInclude Include="..\gen\ASTNENode.h" />
-    <ClInclude Include="..\gen\ASTNotNode.h" />
-    <ClInclude Include="..\gen\ASTOrNode.h" />
-    <ClInclude Include="..\gen\ASTReadStatement.h" />
-    <ClInclude Include="..\gen\ASTStatementExpression.h" />
-    <ClInclude Include="..\gen\ASTSubtractNode.h" />
-    <ClInclude Include="..\gen\ASTTrueNode.h" />
-    <ClInclude Include="..\gen\ASTVarDeclaration.h" />
-    <ClInclude Include="..\gen\ASTWhileStatement.h" />
-    <ClInclude Include="..\gen\ASTWriteStatement.h" />
     <ClInclude Include="..\gen\CharStream.h" />
     <ClInclude Include="..\gen\ErrorHandler.h" />
     <ClInclude Include="..\gen\JavaCC.h" />
     <ClInclude Include="..\gen\JJTSPLParserState.h" />
-    <ClInclude Include="..\gen\MyNode.h" />
     <ClInclude Include="..\gen\Node.h" />
     <ClInclude Include="..\gen\ParseException.h" />
     <ClInclude Include="..\gen\SimpleNode.h" />
@@ -233,10 +207,38 @@
     <ClInclude Include="..\gen\Token.h" />
     <ClInclude Include="..\gen\TokenManager.h" />
     <ClInclude Include="..\gen\TokenMgrError.h" />
-    <ClInclude Include="..\src\main\cpp\MyNode.h" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="..\SPL.jjt" />
+    <ClInclude Include="..\jjt\ASTAddNode.h" />
+    <ClInclude Include="..\jjt\ASTAndNode.h" />
+    <ClInclude Include="..\jjt\ASTAssignment.h" />
+    <ClInclude Include="..\jjt\ASTBitwiseAndNode.h" />
+    <ClInclude Include="..\jjt\ASTBitwiseComplNode.h" />
+    <ClInclude Include="..\jjt\ASTBitwiseOrNode.h" />
+    <ClInclude Include="..\jjt\ASTBitwiseXorNode.h" />
+    <ClInclude Include="..\jjt\ASTBlock.h" />
+    <ClInclude Include="..\jjt\ASTCompilationUnit.h" />
+    <ClInclude Include="..\jjt\ASTDivNode.h" />
+    <ClInclude Include="..\jjt\ASTEQNode.h" />
+    <ClInclude Include="..\jjt\ASTFalseNode.h" />
+    <ClInclude Include="..\jjt\ASTGENode.h" />
+    <ClInclude Include="..\jjt\ASTGTNode.h" />
+    <ClInclude Include="..\jjt\ASTId.h" />
+    <ClInclude Include="..\jjt\ASTIfStatement.h" />
+    <ClInclude Include="..\jjt\ASTIntConstNode.h" />
+    <ClInclude Include="..\jjt\ASTLENode.h" />
+    <ClInclude Include="..\jjt\ASTLTNode.h" />
+    <ClInclude Include="..\jjt\ASTModNode.h" />
+    <ClInclude Include="..\jjt\ASTMulNode.h" />
+    <ClInclude Include="..\jjt\ASTNENode.h" />
+    <ClInclude Include="..\jjt\ASTNotNode.h" />
+    <ClInclude Include="..\jjt\ASTOrNode.h" />
+    <ClInclude Include="..\jjt\ASTReadStatement.h" />
+    <ClInclude Include="..\jjt\ASTStatementExpression.h" />
+    <ClInclude Include="..\jjt\ASTSubtractNode.h" />
+    <ClInclude Include="..\jjt\ASTTrueNode.h" />
+    <ClInclude Include="..\jjt\ASTVarDeclaration.h" />
+    <ClInclude Include="..\jjt\ASTWhileStatement.h" />
+    <ClInclude Include="..\jjt\ASTWriteStatement.h" />
+    <ClInclude Include="..\jjt\MyNode.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
